// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OutlineButton /> primary renders correctly 1`] = `
.c1 {
  display: inline-block;
  margin: 0;
  padding: 0.75rem 1.5rem;
  font-size: 1rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.125em;
  -moz-letter-spacing: 0.125em;
  -ms-letter-spacing: 0.125em;
  letter-spacing: 0.125em;
  line-height: 1.35;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  border: 2px solid;
  border-color: transparent;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background-color 200ms ease-in;
  transition: background-color 200ms ease-in;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: white;
  background-color: #E40000;
}

.c1:hover:not(:disabled) {
  background-color: #b10000;
}

.c1:focus {
  box-shadow: 0 0 2px 2px #999999;
}

.c1:disabled {
  background-color: #DADADA;
  color: #999999;
  cursor: not-allowed;
}

.c0 {
  background-color: transparent;
  border-color: #E40000;
  -webkit-transition: none;
  transition: none;
}

.c0:not(:hover) {
  color: #E40000;
}

.c0:hover:not(:disabled) {
  background-color: #E40000;
  border-color: #E40000;
}

.c0:disabled {
  color: #999999;
  border-color: #999999;
}

<OutlineButton
  primary={true}
>
  <Button
    blacklist={
      Array [
        "buttonStyle",
        "m",
        "mt",
        "mr",
        "mb",
        "ml",
        "mx",
        "my",
        "p",
        "pt",
        "pr",
        "pb",
        "pl",
        "px",
        "py",
        "color",
        "bg",
        "boxShadow",
        "primary",
        "rounded",
        "block",
      ]
    }
    buttonStyle="default"
    className="c0"
    primary={true}
  >
    <Clean.button
      blacklist={
        Array [
          "buttonStyle",
          "m",
          "mt",
          "mr",
          "mb",
          "ml",
          "mx",
          "my",
          "p",
          "pt",
          "pr",
          "pb",
          "pl",
          "px",
          "py",
          "color",
          "bg",
          "boxShadow",
          "primary",
          "rounded",
          "block",
        ]
      }
      buttonStyle="default"
      className="c0 c1"
      primary={true}
    >
      <Clean.div
        blacklist={
          Array [
            "buttonStyle",
            "m",
            "mt",
            "mr",
            "mb",
            "ml",
            "mx",
            "my",
            "p",
            "pt",
            "pr",
            "pb",
            "pl",
            "px",
            "py",
            "color",
            "bg",
            "boxShadow",
            "primary",
            "rounded",
            "block",
          ]
        }
        buttonStyle="default"
        className="c0 c1"
        is="button"
        primary={true}
      >
        <button
          className="c0 c1"
        >
          Hello world
        </button>
      </Clean.div>
    </Clean.button>
  </Button>
</OutlineButton>
`;

exports[`<OutlineButton /> renders correctly 1`] = `
.c1 {
  display: inline-block;
  margin: 0;
  padding: 0.75rem 1.5rem;
  font-size: 1rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.125em;
  -moz-letter-spacing: 0.125em;
  -ms-letter-spacing: 0.125em;
  letter-spacing: 0.125em;
  line-height: 1.35;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  border: 2px solid;
  border-color: transparent;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background-color 200ms ease-in;
  transition: background-color 200ms ease-in;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: white;
  background-color: #323232;
}

.c1:hover:not(:disabled) {
  background-color: #181818;
}

.c1:focus {
  box-shadow: 0 0 2px 2px #999999;
}

.c1:disabled {
  background-color: #DADADA;
  color: #999999;
  cursor: not-allowed;
}

.c0 {
  background-color: transparent;
  -webkit-transition: none;
  transition: none;
}

.c0:disabled {
  color: #999999;
  border-color: #999999;
}

<OutlineButton>
  <Button
    blacklist={
      Array [
        "buttonStyle",
        "m",
        "mt",
        "mr",
        "mb",
        "ml",
        "mx",
        "my",
        "p",
        "pt",
        "pr",
        "pb",
        "pl",
        "px",
        "py",
        "color",
        "bg",
        "boxShadow",
        "primary",
        "rounded",
        "block",
      ]
    }
    buttonStyle="default"
    className="c0"
  >
    <Clean.button
      blacklist={
        Array [
          "buttonStyle",
          "m",
          "mt",
          "mr",
          "mb",
          "ml",
          "mx",
          "my",
          "p",
          "pt",
          "pr",
          "pb",
          "pl",
          "px",
          "py",
          "color",
          "bg",
          "boxShadow",
          "primary",
          "rounded",
          "block",
        ]
      }
      buttonStyle="default"
      className="c0 c1"
    >
      <Clean.div
        blacklist={
          Array [
            "buttonStyle",
            "m",
            "mt",
            "mr",
            "mb",
            "ml",
            "mx",
            "my",
            "p",
            "pt",
            "pr",
            "pb",
            "pl",
            "px",
            "py",
            "color",
            "bg",
            "boxShadow",
            "primary",
            "rounded",
            "block",
          ]
        }
        buttonStyle="default"
        className="c0 c1"
        is="button"
      >
        <button
          className="c0 c1"
        >
          Click here
        </button>
      </Clean.div>
    </Clean.button>
  </Button>
</OutlineButton>
`;

exports[`<OutlineButton /> rounded renders correctly 1`] = `
.c1 {
  display: inline-block;
  margin: 0;
  padding: 0.75rem 1.5rem;
  font-size: 1rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.125em;
  -moz-letter-spacing: 0.125em;
  -ms-letter-spacing: 0.125em;
  letter-spacing: 0.125em;
  line-height: 1.35;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  border: 2px solid;
  border-color: transparent;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background-color 200ms ease-in;
  transition: background-color 200ms ease-in;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: white;
  background-color: #323232;
  border-radius: 1000px;
}

.c1:hover:not(:disabled) {
  background-color: #181818;
}

.c1:focus {
  box-shadow: 0 0 2px 2px #999999;
}

.c1:disabled {
  background-color: #DADADA;
  color: #999999;
  cursor: not-allowed;
}

.c0 {
  background-color: transparent;
  -webkit-transition: none;
  transition: none;
}

.c0:disabled {
  color: #999999;
  border-color: #999999;
}

<OutlineButton
  rounded={true}
>
  <Button
    blacklist={
      Array [
        "buttonStyle",
        "m",
        "mt",
        "mr",
        "mb",
        "ml",
        "mx",
        "my",
        "p",
        "pt",
        "pr",
        "pb",
        "pl",
        "px",
        "py",
        "color",
        "bg",
        "boxShadow",
        "primary",
        "rounded",
        "block",
      ]
    }
    buttonStyle="default"
    className="c0"
    rounded={true}
  >
    <Clean.button
      blacklist={
        Array [
          "buttonStyle",
          "m",
          "mt",
          "mr",
          "mb",
          "ml",
          "mx",
          "my",
          "p",
          "pt",
          "pr",
          "pb",
          "pl",
          "px",
          "py",
          "color",
          "bg",
          "boxShadow",
          "primary",
          "rounded",
          "block",
        ]
      }
      buttonStyle="default"
      className="c0 c1"
      rounded={true}
    >
      <Clean.div
        blacklist={
          Array [
            "buttonStyle",
            "m",
            "mt",
            "mr",
            "mb",
            "ml",
            "mx",
            "my",
            "p",
            "pt",
            "pr",
            "pb",
            "pl",
            "px",
            "py",
            "color",
            "bg",
            "boxShadow",
            "primary",
            "rounded",
            "block",
          ]
        }
        buttonStyle="default"
        className="c0 c1"
        is="button"
        rounded={true}
      >
        <button
          className="c0 c1"
        >
          Hello world
        </button>
      </Clean.div>
    </Clean.button>
  </Button>
</OutlineButton>
`;
